Initial SDK POC implementation